--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" type="text/css" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;400;700&display=swap" rel="stylesheet">
@@ -57,8 +58,8 @@
             </h4>
             <h4>
               <a id="genius-lyrics-link" href="" target="_blank">Genius</a> | <a id="google-lyrics-search" href="" target="_blank">Google Search</a>
-              <h4>
-          </div>
+              </h4>h4>
+          </div> fade ends here
         </div>
       </div>
     </div>
