--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             </h4>
             <h4>
               <a id="genius-lyrics-link" href="" target="_blank">Genius</a> | <a id="google-lyrics-search" href="" target="_blank">Google Search</a>
-              </h4>h4>
-          </div> fade ends here
+              </h4>
+          </div> 
         </div>
       </div>
     </div>
