Shifter to deezer api
Back-end improvement to the api, shift to deezer which offers faster album search and more accurate results.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
                 <h2 id="artist-bio-name">Artist name here</h2> </div>
             <div id="extra-main">
                 <div id="wikipedia"></div>
+                <a id="wiki-page-link" href="" target="_blank"><img src="images/wikipedia.png"></a>
+                <h4 id="album-info-wiki">About</h4>
+                <div id="wikipedia_album"></div>
+                <a id="wiki-album-link" href="" target="_blank"><img src="images/wikipedia.png"></a>
             </div>
-            <div id="extra-side">
+            <div id="extra-side"> <img src="images/transparent.png" id="artist-image" alt="Album Art">
                 <h4>About</h4>
                 <p><b>Origin: </b></p>
                 <p id="artist-from">...</p>
@@ -38,7 +42,6 @@
                 <div id=relations>
                     <div id="relations-auto"></div>
                     <div id="relations-manual">
-                        <a id="wiki-page-link" href="" target="_blank"><img src="images/wikipedia.png"></a>
                         <a id="mb-artist-link" href="" target="_blank"><img src="images/mb.png"></a>
                         <a id="aoty-artist-link" href="" target="_blank"><img src="images/aoty.png"></a>
                     </div>
