--- a/index.html
+++ b/index.html
@@ -54,47 +54,48 @@
     <div id="background"></div>
     <div id="all_content">
         <div id="centering">
-            <div class="cover-info">
-                <div class="lastfmcover"><img src="images/transparent.png" id="last-album-art" alt="Album Art"></div>
-                <div class="mbcover"><img src="images/transparent.png" id="mb-album-art" alt="Album Art"></div>
-            </div>
-            <div id="track_info_div">
-                <h1 id="track-info">Track information</h1>
-                <h2 id="artist-info">Artist information</h2>
-                <h3 id="album-info">Album information</h3>
-                <div class="fade">
-                    <p id="artist-bio">Short artist bio wikipedia</p>
-                    <h5><a id="fullscreen-button" href="#" onclick="fullscreen();"><i id="fullscreen-icon" class="material-icons settings-icon">fullscreen</i></a></h5>
-                    <!--code for the full screen, not used anymore <a id="fullscreen-button" href="#" onclick="expandFooter();"><i id="fullscreen-icon" class="material-icons settings-icon">open_in_full</i></a> -->
-                    <br>
-                    <h5>
+            <div id="container">
+                <div id="cover-info"> <img src="images/top.png" alt="Flowers in Chania">
+                    <div class="mbcover"><img src="images/transparent.png" id="mb-album-art" alt="Album Art"></div>
+                </div>
+                <div id="track_info_div"> <img src="images/top.png" alt="Flowers in Chania">
+                    <h1 id="track-info">Track information</h1>
+                    <h2 id="artist-info">Artist information</h2>
+                    <h3 id="album-info">Album information</h3>
+                    <div class="fade">
+                        <p id="artist-bio">Short artist bio wikipedia</p>
+                        <h5><a id="fullscreen-button" href="#" onclick="fullscreen();"><i id="fullscreen-icon" class="material-icons settings-icon">fullscreen</i></a></h5>
+                        <!--code for the full screen, not used anymore <a id="fullscreen-button" href="#" onclick="expandFooter();"><i id="fullscreen-icon" class="material-icons settings-icon">open_in_full</i></a> -->
+                        <br>
+                        <h5>
               <i class="material-icons">event</i>
             </h5>
-                    <h5 id="release-date">Release date</h5>
-                    <br>
-                    <h5>
+                        <h5 id="release-date">Release date</h5>
+                        <br>
+                        <h5>
               <i class="material-icons">label</i>
             </h5>
-                    <h5 id="artist-tags">Artist tags from Last.fm</h5>
-                    <br>
-                    <h5>
+                        <h5 id="artist-tags">Artist tags from Last.fm</h5>
+                        <br>
+                        <h5>
               <i class="material-icons">auto_awesome</i>
             </h5>
-                    <h5 id="similar-artists">Similar artists from Last.fm tags</h5>
-                    <br>
-                    <h5>
+                        <h5 id="similar-artists">Similar artists from Last.fm tags</h5>
+                        <br>
+                        <h5>
               <i class="material-icons">search</i>
             </h5>
-                    <h5>
+                        <h5>
               <a id="aoty-link" href="" target="_blank">AOTY: Artist</a> | <a id="aoty-album-link" href="" target="_blank">AOTY: Album</a> | <a id="last_artist_link" href="" target="_blank">Last.fm: Artist</a> | <a id="last_album_link" href="" target="_blank">Last.fm: Album</a> | <a id="song-link" href="" target="_blank">Last.fm: Track</a>
             </h5>
-                    <br>
-                    <h5>
+                        <br>
+                        <h5>
               <i class="material-icons">lyrics</i>
             </h5>
-                    <h5>
+                        <h5>
               <a id="genius-lyrics-link" href="" target="_blank">Genius</a> | <a id="google-lyrics-search" href="" target="_blank">Google Search</a>
               </h5> </div>
+                </div>
             </div>
         </div>
     </div>
