--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
             </div>
         </div>
     </div>
-    <div id="background"></div>
     <div id="all_content">
         <div id="centering">
             <div id="container">
-                <div id="cover-info"> <img src="images/top.png" alt="Flowers in Chania">
-                    <div class="mbcover"><img src="images/transparent.png" id="mb-album-art" alt="Album Art"></div>
+                <div id="cover-info"><img src="images/top.png" id="buffer">
+                    <div class="mbcover"> <img src="images/album.png" id="mb-album-art">
+                        <!-- <img src="images/transparent.png" id="mb-album-art" alt="Album Art"> --></div>
                 </div>
-                <div id="track_info_div"> <img src="images/top.png" alt="Flowers in Chania">
+                <div id="track_info_div">
                     <h1 id="track-info">Track information</h1>
                     <h2 id="artist-info">Artist information</h2>
                     <h3 id="album-info">Album information</h3>
