cors proxy implemented

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;400;700&display=swap" rel="stylesheet">
     <script src="apikey.js"></script>
     <script src="get_data.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
