--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div class="top-right"> <a id="fullscreen-button" href="#" onclick="fullscreen();"><i id="fullscreen-icon" class="material-icons settings-icon">fullscreen</i></a></div>
     <div id="side-bar">
         <div class="content">
             <div id="extra-main-header">
@@ -26,6 +27,38 @@
             </div>
             <div id="extra-side"> <img src="images/transparent.png" id="artist-image" alt="Album Art">
                 <h4>About</h4>
+                <div class="lastfmlinks">
+                    <!--code for the full screen, not used anymore <a id="fullscreen-button" href="#" onclick="expandFooter();"><i id="fullscreen-icon" class="material-icons settings-icon">open_in_full</i></a> -->
+                    <br>
+                    <h5>
+              <i class="material-icons">event</i>
+            </h5>
+                    <h5 id="release-date">Release date</h5>
+                    <br>
+                    <h5>
+              <i class="material-icons">label</i>
+            </h5>
+                    <h5 id="artist-tags">Artist tags from Last.fm</h5>
+                    <br>
+                    <h5>
+              <i class="material-icons">auto_awesome</i>
+            </h5>
+                    <h5 id="similar-artists">Similar artists from Last.fm tags</h5>
+                    <br>
+                    <h5>
+              <i class="material-icons">search</i>
+            </h5>
+                    <h5>
+              <a id="aoty-album-link" href="" target="_blank">AOTY: Album</a> | <a id="last_artist_link" href="" target="_blank">Last.fm: Artist</a> | <a id="last_album_link" href="" target="_blank">Last.fm: Album</a> | <a id="song-link" href="" target="_blank">Last.fm: Track</a>
+            </h5>
+                    <br>
+                    <h5>
+              <i class="material-icons">lyrics</i>
+            </h5>
+                    <h5>
+              <a id="genius-lyrics-link" href="" target="_blank">Genius</a> | <a id="google-lyrics-search" href="" target="_blank">Google Search</a>
+              </h5> </div>
+                <!-- # end of fade-->
                 <p><b>Origin: </b></p>
                 <p id="artist-from">...</p>
                 <br>
@@ -51,50 +84,17 @@
             </div>
         </div>
     </div>
-    <div id="all_content">
-        <div id="centering">
+    <div id="centering">
+        <div id="all_content">
             <div id="container">
                 <div id="cover-info"><img src="images/top.png" id="buffer">
                     <div class="mbcover"> <img src="images/album.png" id="mb-album-art">
                         <!-- <img src="images/transparent.png" id="mb-album-art" alt="Album Art"> --></div>
                 </div>
-                <div id="track_info_div">
+                <div id="track_info_div"> <img src="images/top.png" id="buffer">
                     <h1 id="track-info">Track information</h1>
                     <h2 id="artist-info">Artist information</h2>
-                    <h3 id="album-info">Album information</h3>
-                    <div class="fade">
-                        <h5><a id="fullscreen-button" href="#" onclick="fullscreen();"><i id="fullscreen-icon" class="material-icons settings-icon">fullscreen</i></a></h5>
-                        <!--code for the full screen, not used anymore <a id="fullscreen-button" href="#" onclick="expandFooter();"><i id="fullscreen-icon" class="material-icons settings-icon">open_in_full</i></a> -->
-                        <br>
-                        <h5>
-              <i class="material-icons">event</i>
-            </h5>
-                        <h5 id="release-date">Release date</h5>
-                        <br>
-                        <h5>
-              <i class="material-icons">label</i>
-            </h5>
-                        <h5 id="artist-tags">Artist tags from Last.fm</h5>
-                        <br>
-                        <h5>
-              <i class="material-icons">auto_awesome</i>
-            </h5>
-                        <h5 id="similar-artists">Similar artists from Last.fm tags</h5>
-                        <br>
-                        <h5>
-              <i class="material-icons">search</i>
-            </h5>
-                        <h5>
-              <a id="aoty-link" href="" target="_blank">AOTY: Artist</a> | <a id="aoty-album-link" href="" target="_blank">AOTY: Album</a> | <a id="last_artist_link" href="" target="_blank">Last.fm: Artist</a> | <a id="last_album_link" href="" target="_blank">Last.fm: Album</a> | <a id="song-link" href="" target="_blank">Last.fm: Track</a>
-            </h5>
-                        <br>
-                        <h5>
-              <i class="material-icons">lyrics</i>
-            </h5>
-                        <h5>
-              <a id="genius-lyrics-link" href="" target="_blank">Genius</a> | <a id="google-lyrics-search" href="" target="_blank">Google Search</a>
-              </h5> </div>
-                </div>
+                    <h3 id="album-info">Album information</h3> </div>
             </div>
         </div>
     </div>
