--- a/tiny.html
+++ b/tiny.html
@@ -13,12 +13,15 @@
 </head>
 
 <body>
-    <div id="all_content">
-        <div id="lastcover"> <img src="images/last.fm.png" id="lastcover_art">
-            <!-- <img src="images/transparent.png" id="mb-album-art" alt="Album Art"> --></div>
-        <h1 id="track-info">Track information</h1>
-        <h2 id="artist-info">Artist information</h2>
-        <h3 id="album-info">Album information</h3> </div>
+    <div class="container">
+        <div class="center">
+            <div id="lastcover"> <img src="images/last.fm.png" id="lastcover_art"></div>
+            <div id="lasttext">
+                <h1 id="track-info">Track information</h1>
+                <h2 id="artist-info">Artist information</h2>
+                <h3 id="album-info">Album information</h3> </div>
+        </div>
+    </div>
 </body>
 
 </html>
