Updated the screenshots, small style updates

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                     <div class="mbcover"> <img src="images/album.png" id="mb-album-art">
                         <!-- <img src="images/transparent.png" id="mb-album-art" alt="Album Art"> --></div>
                 </div>
-                <div id="track_info_div"> <img src="images/top.png" id="buffer">
+                <div id="track_info_div"> 
+                    <img src="images/top.png" id="buffer">
                     <h1 id="track-info">Track information</h1>
                     <h2 id="artist-info">Artist information</h2>
                     <h3 id="album-info">Album information</h3> </div>
